--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = configurable
 
-Description goes here.
+configuable is a module that provide features to dynamic create configuration attribute's setter & getter
 
 == Contributing to configurable
  
@@ -14,6 +14,5 @@ Description goes here.
 
 == Copyright
 
-Copyright (c) 2011 simon iong. See LICENSE.txt for
-further details.
+Copyright (c) 2011 simon iong. See LICENSE for further details.
 
